--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,13 +1,18 @@
 [tool.poetry]
 name = "scutls"
-version = "0.1.3"
-description = ""
-authors = ["Your Name <you@example.com>"]
+version = "0.1.8"
+description = "Single-cell data processing utility tools"
+authors = ["Kai Hu <kai.hu@umassmed.edu>"]
 
 [tool.poetry.dependencies]
 python = "^3.7"
 importlib-resources = "^5.8.0"
 wget = "^3.2"
+bs4 = "^0.0.1"
+urllib3 = "^1.26.10"
+GEOparse = "^2.0.3"
+biopython = "^1.80"
+regex = "^2023.5.5"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
