--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "scutls"
-version = "0.2.8"
+version = "0.3.0"
 description = "Single-cell data processing utility tools"
 authors = ["Kai Hu <kai.hu@umassmed.edu>"]
 
@@ -13,6 +13,7 @@ urllib3 = "^1.26.10"
 GEOparse = "^2.0.3"
 biopython = "^1.80"
 regex = "^2023.5.5"
+pysam = "^0.21.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
